HV-1778 Reenable CDI extension testing