@@ -22,9 +22,6 @@
 
     <properties>
         <hibernate-validator-parent.path>..</hibernate-validator-parent.path>
-
-        <!-- Temporary, should be removed as soon as we have a working Weld implementation -->
-        <skipTests>true</skipTests>
     </properties>
 
     <dependencies>
@@ -95,10 +92,6 @@
             <scope>test</scope>
             <exclusions>
                 <exclusion>
-                    <groupId>javax.enterprise</groupId>
-                    <artifactId>cdi-api</artifactId>
-                </exclusion>
-                <exclusion>
                     <groupId>org.jboss.spec.javax.el</groupId>
                     <artifactId>jboss-el-api_3.0_spec</artifactId>
                 </exclusion>
@@ -128,7 +121,7 @@
         </dependency>
         <dependency>
             <groupId>org.jboss.arquillian.container</groupId>
-            <artifactId>arquillian-weld-se-embedded-1.1</artifactId>
+            <artifactId>arquillian-weld-embedded</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -194,11 +187,11 @@
                         <Bundle-SymbolicName>${hibernate-validator-cdi.module-name}</Bundle-SymbolicName>
                         <Fragment-Host>${hibernate-validator.module-name}</Fragment-Host>
                         <Import-Package>
-                            javax.validation.*;version="[2.0,3.0)",
-                            javax.annotation.*;version="[1.2,2.0)",
-                            javax.interceptor.*;version="[1.2,2.0)",
-                            javax.enterprise.*;version="[1.2,3.0)",
-                            javax.inject.*
+                            jakarta.validation.*;version="[3.0,4.0)",
+                            jakarta.annotation.*;version="[2.0,3.0)",
+                            jakarta.interceptor.*;version="[2.0,3.0)",
+                            jakarta.enterprise.*;version="[3.0,4.0)",
+                            jakarta.inject.*
                         </Import-Package>
                         <Export-Package>org.hibernate.validator.cdi;version="${project.version}"</Export-Package>
                         <Private-Package>org.hibernate.validator.internal.*;version="${project.version}"</Private-Package>
@@ -231,16 +224,4 @@
             </plugin>
         </plugins>
     </build>
-    <profiles>
-        <profile>
-            <id>jdk9</id>
-            <activation>
-                <jdk>[9,)</jdk>
-            </activation>
-            <properties>
-                <!-- required by Weld -->
-                <surefire.jvm.args.add-opens>--add-opens java.base/java.lang=ALL-UNNAMED</surefire.jvm.args.add-opens>
-            </properties>
-        </profile>
-    </profiles>
 </project>
